<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<import type="android.view.View" />

		<variable
			name="pub"
			type="com.example.android.i_mobv_application.model.Pub" />

		<variable
			name="pubEventListener"
			type="com.example.android.i_mobv_application.ui.adapter.PubEventListener" />

	</data>

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="8dp"
		android:layout_marginVertical="3dp"
		android:onClick="@{() -> pubEventListener.onClick(pub.id, pub.users)}"
		app:cardCornerRadius="30dp"
		app:cardElevation="4dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/pub_icon"
				app:pubIcon="@{pub.type}"
				app:tint="@color/red" />

			<TextView
				android:id="@+id/pub_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:gravity="center"
				android:paddingVertical="10dp"
				android:text="@{pub.name}"
				android:textAppearance="?attr/textAppearanceHeadline6"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:gravity="center"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/number_of_users_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/number_of_users_icon"
				android:tooltipText="@string/number_of_users"
				app:tint="@color/red" />

			<TextView
				android:id="@+id/number_of_users"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:gravity="center"
				android:paddingVertical="10dp"
				android:text="@{Integer.toString(pub.users)}"
				android:textSize="20sp"
				android:tooltipText="@string/number_of_users"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/distance_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/distance_from_pub_icon"
				android:paddingStart="35dp"
				android:paddingEnd="0dp"
				android:tooltipText="@string/your_distance"
				android:visibility="@{pub.distance == -1 ? View.GONE : View.VISIBLE}"
				app:tint="@color/red" />

			<TextView
				android:id="@+id/distance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:gravity="center"
				android:text="@{@string/distance_km(pub.distance / 1000 )}"
				android:textSize="20sp"
				android:tooltipText="@string/your_distance"
				android:visibility="@{pub.distance == -1 ? View.GONE : View.VISIBLE}"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</layout>
