<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<import type="android.view.View" />

		<import type="android.text.TextUtils" />

		<import type="com.example.android.i_mobv_application.utils.UtilsKt" />

		<variable
			name="infoFragment"
			type="com.example.android.i_mobv_application.ui.fragment.pubs.InfoFragment" />

		<variable
			name="pubDetailViewModel"
			type="com.example.android.i_mobv_application.ui.viewmodels.pubs.PubDetailViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="@{pubDetailViewModel.loading ? View.VISIBLE : View.GONE}">

			<ProgressBar
				android:id="@+id/progress_bar"
				style="?android:attr/progressBarStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="@{pubDetailViewModel.loading ? View.GONE : View.VISIBLE}">

			<TextView
				android:id="@+id/pub_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:gravity="center"
				android:paddingVertical="15dp"
				android:text="@{pubDetailViewModel.pub.name}"
				android:textAppearance="?attr/textAppearanceHeadline4"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<LinearLayout
				android:id="@+id/number_of_users_row"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:visibility='@{pubDetailViewModel.pub == null ? View.GONE: View.VISIBLE}'
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/pub_name">

				<ImageView
					android:id="@+id/number_of_users_icon"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:contentDescription="@string/number_of_users_icon"
					android:tooltipText="@string/number_of_users"
					app:tint="@color/red" />

				<TextView
					android:id="@+id/number_of_users"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="6dp"
					android:gravity="center"
					android:visibility="@{infoFragment.users == -1 ? View.INVISIBLE: View.VISIBLE}"
					android:text="@{Integer.toString(infoFragment.users)}"
					android:textSize="30sp"
					android:tooltipText="@string/number_of_users" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/number_of_users_row">

				<TextView
					android:id="@+id/opening_hours"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="50dp"
					android:paddingBottom="30dp"
					android:text='@{UtilsKt.generateOpeningHours(pubDetailViewModel.pub.tags["opening_hours"])}'
					android:textAlignment="textStart"
					android:textSize="20sp"
					android:visibility='@{pubDetailViewModel.pub == null ? View.GONE: View.VISIBLE}' />
			</LinearLayout>


			<com.google.android.material.button.MaterialButton
				android:id="@+id/show_on_map"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="350dp"
				android:background="@drawable/rounded_button"
				android:text="@string/show_on_map"
				android:textColor="?buttonStyle"
				android:visibility='@{pubDetailViewModel.pub == null ? View.GONE: View.VISIBLE}'
				app:icon="@drawable/ic_baseline_location_on_24"
				app:iconGravity="textStart"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/call_phone"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="25dp"
				android:background="@drawable/rounded_button"
				android:text="@string/call"
				android:textColor="?buttonStyle"
				android:visibility='@{TextUtils.isEmpty(pubDetailViewModel.pub.tags["phone"]) ? View.GONE: View.VISIBLE}'
				app:icon="@drawable/ic_baseline_local_phone_24"
				app:iconGravity="textStart"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/show_on_map" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/visit_website"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="25dp"
				android:background="@drawable/rounded_button"
				android:text="@string/visit_website"
				android:textColor="?buttonStyle"
				android:visibility='@{TextUtils.isEmpty(pubDetailViewModel.pub.tags["website"]) ? View.GONE: View.VISIBLE}'
				app:icon="@drawable/ic_baseline_open_in_new_24"
				app:iconGravity="textStart"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/call_phone" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<View
			showTextToast="@{pubDetailViewModel.message}"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
