<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ui.fragment.location.LocationFragment">

	<data>

		<import type="android.view.View" />

		<variable
			name="locationViewModel"
			type="com.example.android.i_mobv_application.ui.viewmodels.location.LocationViewModel" />
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginVertical="50dp"
		android:orientation="vertical">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:visibility="@{locationViewModel.loading ? View.VISIBLE : View.GONE}">

			<com.airbnb.lottie.LottieAnimationView
				android:id="@+id/loading"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:tooltipText="Loading Nearby Pubs"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintDimensionRatio="1:1"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:lottie_loop="true"
				app:lottie_speed="0.6" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingVertical="25dp"
				android:text="@string/loading_nearby_pubs_n_tplease_stand_by"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/loading" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="@{locationViewModel.loading ? View.GONE : View.VISIBLE}">

			<TextView
				android:id="@+id/nearest_pub_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="8dp"
				android:paddingVertical="8dp"
				android:text="@string/nearest_pub"
				android:textAppearance="?attr/textAppearanceHeadline6"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/nearest_pub"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="8dp"
				app:cardCornerRadius="30dp"
				app:cardElevation="10dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/nearest_pub_title">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="5dp">

					<ImageView
						android:id="@+id/pub_icon"
						android:layout_width="50dp"
						android:layout_height="50dp"
						android:layout_marginHorizontal="5dp"
						android:contentDescription="@string/pub_icon"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:pubIcon="@{locationViewModel.nearestPub.type}"
						app:tint="@color/red" />

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="50dp"
						android:gravity="center"
						android:orientation="horizontal"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@id/mark_location"
						app:layout_constraintStart_toEndOf="@id/pub_icon"
						app:layout_constraintTop_toTopOf="parent">

						<TextView
							android:id="@+id/name"
							android:layout_width="230dp"
							android:layout_height="75dp"
							android:layout_marginHorizontal="15dp"
							android:layout_marginVertical="15dp"
							android:paddingStart="50dp"
							android:paddingEnd="30dp"
							android:text='@{locationViewModel.nearestPub.name}'
							android:textAlignment="center"
							android:textSize="19sp"
							android:textStyle="bold"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toTopOf="parent" />
					</LinearLayout>


					<LinearLayout
						android:layout_width="283dp"
						android:layout_height="40dp"
						android:layout_marginStart="36dp"
						android:layout_marginTop="110dp"
						android:gravity="center"
						android:orientation="horizontal"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent">

						<ImageView
							android:id="@+id/distance_icon"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:contentDescription="@string/distance_from_pub_icon"
							android:paddingStart="35dp"
							android:paddingEnd="0dp"
							android:tooltipText="@string/your_distance"
							app:tint="@color/red" />

						<TextView
							android:id="@+id/distance"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="6dp"
							android:gravity="center"
							android:text="@{@string/distance_m(locationViewModel.nearestPub.distance)}"
							android:textSize="20sp"
							android:tooltipText="@string/your_distance"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintTop_toTopOf="parent" />

					</LinearLayout>

					<com.airbnb.lottie.LottieAnimationView
						android:id="@+id/mark_location"
						android:layout_width="85dp"
						android:layout_height="85dp"
						android:adjustViewBounds="true"
						android:paddingBottom="10dp"
						android:tooltipText="Mark Location"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintDimensionRatio="1:1"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:lottie_loop="false"
						app:lottie_speed="0.7" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<TextView
				android:id="@+id/other_pubs_in_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="8dp"
				android:paddingVertical="8dp"
				android:text="@string/other_pubs_in_your_location"
				android:textAppearance="?attr/textAppearanceHeadline6"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/nearest_pub" />

			<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
				android:id="@+id/refresh"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="100dp"
				android:paddingTop="80dp"
				android:paddingBottom="185dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/other_pubs_in_location"
				tools:ignore="NotSibling">

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/recycler_view"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="20dp"
					android:scrollbars="vertical"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					app:nearbyListData="@{locationViewModel.pubsInLocation}"
					tools:listitem="@layout/nearby_pub_list_item" />

			</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

			<View
				showTextToast="@{locationViewModel.message}"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</LinearLayout>
</layout>